--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "@vitejs/plugin-react": "^4.3.4",
-        "autoprefixer": "^10.4.21",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.12",
         "typescript": "^5.6.3",
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.5",
+        "@emotion/styled": "^11.13.0",
         "@inertiajs/react": "^2.1.2",
+        "@mui/icons-material": "^6.1.7",
+        "@mui/material": "^6.1.7",
+        "@mui/x-date-pickers": "^7.22.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     }
